--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="./images/firm-brand/firm-brand.png"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-beta.2/lazyload.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/main-page.css">
@@ -169,6 +170,26 @@
                             </div>
                         </div>
                         <img class="d-block w-100" src="./images/slider/slider-3.png" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-caption d-none d-md-block">
+                            <div class="main-page__text">
+                                <div class="main-page__text__title"><a>INFINITI Q10 SERIES 2011</a></div>
+                                <div class="main-page__text__price">
+                                    <div class="price">
+                                        <a class="price">$200</a><a>/MO</a>
+                                    </div>
+                                    <div class="month12">
+                                        <a>FOR<br> 12 MONTH</a>
+                                    </div>
+                                </div>
+
+                                <div class="main-page__text__learnmore">
+                                    <a class="text" href="javascript:void(0)">Learn more</a>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="d-block w-100" src="./images/slider/slider-4.png" alt="First slide">
                     </div>
                 </div>
 
@@ -521,7 +542,7 @@
         </div>
 
     </div>
-    <div class="special-cars">
+    <div class="special-cars lazyload">
         <div class="special-item">
             <div class="parent-wrapper special-car1">
                 <div class="discount">
@@ -535,7 +556,7 @@
                 </div>
             </div>
         </div>
-        <div class="special-item spec2">
+        <div class="special-item spec2 lazyload">
             <div class="parent-wrapper special-car2">
                 <div class="discount all-width without-bg white-text flex-vertical">
                     <div class="row first"><a>INFINITI FX 50S</a></div>
@@ -547,7 +568,7 @@
                 </div>
             </div>
         </div>
-        <div class="special-item spec3">
+        <div class="special-item spec3 lazyload">
             <div class="parent-wrapper special-car3">
                 <div class="discount long">
                     <div class="text-block">
@@ -560,7 +581,7 @@
                 </div>
             </div>
         </div>
-        <div class="special-item spec4">
+        <div class="special-item spec4 lazyload">
             <div class="parent-wrapper special-car4">
                 <div class="discount all-width without-bg white-text flex-vertical">
                     <div class="row first"><a>INFINITI FX 35S</a></div>
@@ -833,9 +854,5 @@
 
 <script src="js/site.js"></script>
 
-
-<script type="text/javascript" src="js/slider.js">
-
-</script>
 </body>
 </html>
